La inititiell mapping for API v2
